--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
   color: #1f252d;
   max-width: 100%;
 }
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #f4f4f4;
+  }
+}
 body img {
   display: block;
   max-width: 100%;
@@ -33,6 +38,11 @@ body p {
   line-height: 1.8;
   text-wrap: pretty;
 }
+@media (prefers-color-scheme: dark) {
+  body p {
+    color: #ddd;
+  }
+}
 body .icon {
   width: 1.025rem;
   height: auto;
@@ -42,11 +52,6 @@ body .icon {
 main {
   scroll-margin-top: 5vh;
 }
-@media (prefers-color-scheme: dark) {
-  main {
-    color: #f4f4f4;
-  }
-}
 
 section {
   width: 100%;
@@ -54,8 +59,8 @@ section {
 }
 @media (prefers-color-scheme: dark) {
   section {
-    background: #29323d;
-    color: #f4f4f4;
+    background: yellow;
+    background: #1f252d;
   }
 }
 section .section-title {
@@ -2118,14 +2123,14 @@ form button:hover::after {
 }
 #projects .projects .project-item .project-tile {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   flex-basis: 50%;
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   padding: 1.5rem 1rem 1rem;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
 }
 @media (min-width: 768px) {
   #projects .projects .project-item .project-tile {
@@ -2240,14 +2245,6 @@ form button:hover::after {
 
 .skills-section {
   padding: 10vh 0 0;
-  background: linear-gradient(25deg, #ececec 25%, #fff 40%);
-  background: #fafafa;
-}
-@media (prefers-color-scheme: dark) {
-  .skills-section {
-    background: #1f252d;
-    color: #ddd;
-  }
 }
 .skills-section .skills-header {
   padding: 0 5vw;
@@ -2262,8 +2259,8 @@ form button:hover::after {
   }
 }
 .skills-section .skills-content .skills-intro {
-  padding: 0 2.5vw 5vh 5vw;
   padding: 0 5vw 5vh 5vw;
+  padding: 0 2.5vw 5vh 5vw;
   position: relative;
 }
 @media (min-width: 576px) {
@@ -2408,11 +2405,11 @@ form button:hover::after {
   border-bottom: none;
 }
 .skill-section .skill-section-title {
+  background: linear-gradient(140deg, #15191e 40%, transparent);
+  height: 85vh;
   padding: 5vh 5vw;
   position: relative;
   isolation: isolate;
-  height: 85vh;
-  background: linear-gradient(140deg, #15191e 40%, transparent);
 }
 @media (min-width: 820px) {
   .skill-section .skill-section-title {
@@ -2737,7 +2734,7 @@ form button:hover::after {
 }
 @media (prefers-color-scheme: dark) {
   .work {
-    background: #475462;
+    background: #1f252d;
   }
 }
 
@@ -2791,12 +2788,12 @@ form button:hover::after {
   }
 }
 .work-container .item {
-  overflow: hidden;
+  margin-bottom: 10vh;
+  background: #ffff;
   border-radius: 0.25rem;
-  background: #15191e;
   box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.1);
   position: relative;
-  margin-bottom: 10vh;
+  overflow: hidden;
 }
 @media (min-width: 576px) {
   .work-container .item {
@@ -2806,6 +2803,16 @@ form button:hover::after {
 @media (min-width: 768px) {
   .work-container .item {
     background: #ffff;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .work-container .item {
+    background: #f4f4f4;
+    color: #29323d;
+    box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 0.05);
+  }
+  .work-container .item p {
+    color: inherit;
   }
 }
 .work-container .item .item-header {
@@ -3037,7 +3044,6 @@ form button:hover::after {
 .work-container .item .item-content .item-image {
   width: 100%;
   height: 100%;
-  transform: scale(1.1);
   transition: 250ms;
   border-radius: 0.25rem;
   position: relative;
