--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -10,7 +10,7 @@
         }
 
         @include abstracts.dark {
-            background: abstracts.$overlay-blue-darker;
+            // background: abstracts.$overlay-blue-darker;
         }
 
     }
@@ -153,7 +153,7 @@
             &:hover {
                 // transform: scale(1.1);
                 // transform: rotateY(10deg) translateZ(5rem);
-                animation: card-hover 500ms forwards;
+                animation: card-hover 400ms ease-in-out forwards;
                 
                 @media(prefers-reduced-motion ){
                     animation: none;
@@ -196,15 +196,6 @@
     @keyframes card-hover {
         50% {
             scale: 1.05;
-            animation-timing-function: ease-in;
-        }
-
-        
-        85% {
-            scale: 1.025;
-        }
-        
-        75%, 100% {
-            scale: 1;
+            // animation-timing-function: ease-in;
         }
     }
