--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -47,6 +47,7 @@ $overlay-blue-darkest:hsl(213, 18%, 10%);
 $overlay-blue-black:hsl(213, 18%, 5%);
 $overlay-black:hsl(213, 18%, 1%);
 $overlay-blue-light: hsl(211, 16%, 33%);
+$overlay-blue-lighter: hsl(211, 16%, 75%);
 $overlay-footer: linear-gradient(0deg, #000, #15191e);
 
 // NAV COLORS
