--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -54,7 +54,7 @@
 
             }
             &.brand-title {
-                background-color: abstracts.$overlay-blue-light;
+                background: abstracts.$overlay;
             }
 
             &.dark-title {
