--- a/css/style.css
+++ b/css/style.css
@@ -2798,6 +2798,30 @@ form button:hover::after {
   }
 }
 
+.work-article {
+  max-width: 550px;
+  position: relative;
+  isolation: isolate;
+}
+.work-article::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fffa;
+  filter: blur(1rem);
+  border-radius: 40%;
+  z-index: -1;
+}
+.work-article h3 {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+  line-height: 1.4;
+}
+
 .work-intro h3 {
   text-transform: capitalize;
   text-align: center;
