--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,7 +30,7 @@ body {
     
     p {
         font-size: 1rem;
-        font-size: abstracts.$font-clamp-sm;
+        font-size: abstracts.$font-clamp-xsm;
         font-weight: 400;
 
         line-height: 1.8;
