--- a/css/style.css
+++ b/css/style.css
@@ -819,6 +819,7 @@ form button:hover::after {
   height: 3px;
   background: #29323d;
   background: linear-gradient(90deg, #29323d, #475462, #29323d);
+  background: #b3c0cc;
   opacity: 0.1;
   width: 0%;
   transition: 0.5s;
@@ -1564,6 +1565,11 @@ form button:hover::after {
   padding: 0.5rem 5vw;
   z-index: 5;
 }
+@media (min-width: 820px) {
+  #nav {
+    padding: 0.5rem 10vw;
+  }
+}
 #nav .logo {
   transition: 1s ease;
   background-color: #0a0d0f;
@@ -1928,6 +1934,7 @@ form button:hover::after {
 @media (min-width: 768px) {
   .hero-grid {
     padding: 15vh 5vw;
+    padding: 15vh 10vw;
     grid-template-columns: 45% auto;
     grid-template-rows: 1fr 1fr;
     column-gap: 1rem;
@@ -2311,6 +2318,11 @@ form button:hover::after {
   padding: 0 5vw;
 }
 @media (min-width: 820px) {
+  .skills-section .skills-header {
+    padding: 0 10vw;
+  }
+}
+@media (min-width: 820px) {
   .skills-section .skills-content {
     background: url("../img/keyboard-mouse.jpg");
     background-repeat: no-repeat;
@@ -2327,6 +2339,7 @@ form button:hover::after {
 @media (min-width: 576px) {
   .skills-section .skills-content .skills-intro {
     padding: 0vh 5vw 5vh;
+    padding: 0vh 10vw 5vh;
   }
 }
 .skills-section .skills-content .skills-intro .skills-article {
@@ -2344,7 +2357,7 @@ form button:hover::after {
 }
 @media (min-width: 820px) {
   .skills-section .skills-content .skills-intro .skills-article p {
-    max-width: 350px;
+    max-width: 300px;
     line-height: 2;
   }
 }
@@ -2474,7 +2487,7 @@ form button:hover::after {
 }
 @media (min-width: 820px) {
   .skill-section .skill-section-title {
-    padding: 20vh 5vw 10vh;
+    padding: 20vh 10vw 10vh;
     height: 90vh;
     height: 100vh;
     background: linear-gradient(140deg, #1f252d 20%, #29323d);
@@ -2788,9 +2801,9 @@ form button:hover::after {
   padding: 10vh 5vw 10vh;
   background: #ececec;
 }
-@media (min-width: 768px) {
+@media (min-width: 820px) {
   .work {
-    padding: 10vh 5vw 10vh;
+    padding: 10vh 10vw 10vh;
   }
 }
 @media (prefers-color-scheme: dark) {
@@ -2866,9 +2879,14 @@ form button:hover::after {
     margin-top: 15vh;
   }
 }
+.work-container .item-flex-container {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
 @media (min-width: 820px) {
   .work-container .item-flex-container {
-    display: flex;
     flex-direction: row-reverse;
     align-items: center;
     align-items: flex-start;
@@ -2877,7 +2895,8 @@ form button:hover::after {
     border-radius: 0.25rem;
   }
 }
-.work-container .item {
+
+.work-item {
   margin-bottom: 10vh;
   background: #fff;
   border-radius: 0.25rem;
@@ -2885,89 +2904,83 @@ form button:hover::after {
   position: relative;
   overflow: hidden;
 }
-@media (min-width: 576px) {
-  .work-container .item {
-    padding: 0.5rem;
-  }
-}
 @media (min-width: 768px) {
-  .work-container .item {
+  .work-item {
     background: #ffff;
   }
 }
 @media (prefers-color-scheme: dark) {
-  .work-container .item {
+  .work-item {
     background: #f4f4f4;
     color: #29323d;
     box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 0.05);
   }
-  .work-container .item p {
+  .work-item p {
     color: inherit;
   }
 }
-.work-container .item .item-header {
-  padding: 0.5rem 0.25rem 0.5rem 0.5rem;
-  padding: 0.5rem 0.5rem 1rem;
-  padding: 1rem 0.5rem 3rem;
+.work-item .item-header {
+  padding: 0.25rem 0.5rem 3rem;
 }
 @media (min-width: 768px) {
-  .work-container .item .item-header {
+  .work-item .item-header {
     display: flex;
     flex-direction: column;
+    padding: 1rem 1rem 3rem;
   }
 }
 @media (min-width: 820px) {
-  .work-container .item .item-header {
+  .work-item .item-header {
     width: 50%;
     height: 100%;
   }
 }
-.work-container .item .item-header .item-title {
+.work-item .item-header .item-title {
   text-transform: capitalize;
   font-weight: 700;
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.25rem);
 }
-.work-container .item .item-header .item-description {
+.work-item .item-header .item-description {
   margin: 0.5rem 0 1rem;
 }
-.work-container .item .item-header .item-description h4 {
+.work-item .item-header .item-description h4 {
   text-transform: capitalize;
   font-size: 0.9rem;
   font-size: clamp(.9rem, 2vw, 1.125rem);
 }
-.work-container .item .item-header .item-description p {
+.work-item .item-header .item-description p {
   font-weight: 400;
   font-size: 1rem;
   font-size: clamp(.95rem, 1.5vw, 1.05rem);
   margin-bottom: 0.5rem;
 }
-.work-container .item .item-header .item-description p::first-letter {
+.work-item .item-header .item-description p::first-letter {
   text-transform: capitalize;
 }
-.work-container .item .item-header .item-description ul {
+.work-item .item-header .item-description ul {
   margin: 1rem;
 }
-.work-container .item .item-header .item-description ul li {
+.work-item .item-header .item-description ul li {
   margin-bottom: 0.25rem;
 }
-.work-container .item .item-header .item-description ul li a {
+.work-item .item-header .item-description ul li a {
   text-transform: capitalize;
   font-size: 0.9rem;
   font-size: clamp(.9rem, 1.5vw, 1.125rem);
   color: inherit;
 }
-.work-container .item .item-header .item-description ul li i {
+.work-item .item-header .item-description ul li i {
   margin-left: 0.5rem;
   color: #b3c0cc;
   transform: scale(0.85);
   transition: 0.25s;
 }
-.work-container .item .item-header .item-description ul li:hover i {
+.work-item .item-header .item-description ul li:hover i {
   color: #dc143c;
   transform: scale(1);
 }
-.work-container .item .item-header .item-cta {
+.work-item .item-header .item-cta {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2975,11 +2988,11 @@ form button:hover::after {
   margin-bottom: 0.5rem;
 }
 @media (min-width: 768px) {
-  .work-container .item .item-header .item-cta {
+  .work-item .item-header .item-cta {
     justify-content: start;
   }
 }
-.work-container .item .item-header .item-cta a {
+.work-item .item-header .item-cta a {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -2995,19 +3008,19 @@ form button:hover::after {
   transition: 100ms ease;
 }
 @media (max-width: 450px) {
-  .work-container .item .item-header .item-cta a {
+  .work-item .item-header .item-cta a {
     cursor: default;
   }
 }
 @media (min-width: 768px) {
-  .work-container .item .item-header .item-cta a {
+  .work-item .item-header .item-cta a {
     width: 10rem;
   }
 }
-.work-container .item .item-header .item-cta a i {
+.work-item .item-header .item-cta a i {
   transition: 0.25s;
 }
-.work-container .item .item-header .item-cta a.cta-primary {
+.work-item .item-header .item-cta a.cta-primary {
   background: #dc143c;
   border: none;
   color: #f4f4f4;
@@ -3015,7 +3028,7 @@ form button:hover::after {
   position: relative;
   isolation: isolate;
 }
-.work-container .item .item-header .item-cta a.cta-primary::after, .work-container .item .item-header .item-cta a.cta-primary::before {
+.work-item .item-header .item-cta a.cta-primary::after, .work-item .item-header .item-cta a.cta-primary::before {
   content: "";
   position: absolute;
   inset: 0;
@@ -3023,16 +3036,16 @@ form button:hover::after {
   transition: 250ms ease;
   z-index: -1;
 }
-.work-container .item .item-header .item-cta a.cta-primary::before {
+.work-item .item-header .item-cta a.cta-primary::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
-.work-container .item .item-header .item-cta a.cta-primary::after {
+.work-item .item-header .item-cta a.cta-primary::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
-.work-container .item .item-header .item-cta a.cta-secondary {
+.work-item .item-header .item-cta a.cta-secondary {
   color: #1f252d;
   background: linear-gradient(0deg, #bfbfbf, #d9d9d9);
   color: inherit;
@@ -3040,36 +3053,36 @@ form button:hover::after {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 @media (min-width: 768px) {
-  .work-container .item .item-header .item-cta a:hover {
+  .work-item .item-header .item-cta a:hover {
     transform: scale(0.98);
     letter-spacing: normal;
   }
-  .work-container .item .item-header .item-cta a:hover i {
+  .work-item .item-header .item-cta a:hover i {
     transform: translateX(-0.25rem);
   }
-  .work-container .item .item-header .item-cta a:hover::before {
+  .work-item .item-header .item-cta a:hover::before {
     opacity: 0;
   }
-  .work-container .item .item-header .item-cta a:hover::after {
+  .work-item .item-header .item-cta a:hover::after {
     opacity: 1;
   }
 }
 @media (max-width: 768px) {
-  .work-container .item .item-header .item-cta a:active {
+  .work-item .item-header .item-cta a:active {
     transform: scale(0.98);
     letter-spacing: normal;
   }
-  .work-container .item .item-header .item-cta a:active i {
+  .work-item .item-header .item-cta a:active i {
     transform: translateX(-0.25rem);
   }
-  .work-container .item .item-header .item-cta a:active::before {
+  .work-item .item-header .item-cta a:active::before {
     opacity: 0;
   }
-  .work-container .item .item-header .item-cta a:active::after {
+  .work-item .item-header .item-cta a:active::after {
     opacity: 1;
   }
 }
-.work-container .item .item-header .item-meta-data {
+.work-item .item-header .item-meta-data {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -3084,8 +3097,9 @@ form button:hover::after {
   list-style: none;
 }
 @media (min-width: 820px) {
-  .work-container .item .item-header .item-meta-data {
-    left: 0.5rem;
+  .work-item .item-header .item-meta-data {
+    left: 1rem;
+    bottom: 0.5rem;
     width: 95%;
     justify-content: start;
     gap: 1rem;
@@ -3095,16 +3109,11 @@ form button:hover::after {
   }
 }
 @media (min-width: 820px) {
-  .work-container .item .item-header .item-meta-data {
+  .work-item .item-header .item-meta-data {
     justify-content: start;
   }
 }
-@media (min-width: 1024px) {
-  .work-container .item .item-header .item-meta-data {
-    bottom: -1rem;
-  }
-}
-.work-container .item .item-header .item-meta-data p {
+.work-item .item-header .item-meta-data p {
   background: #1f252d;
   color: #f4f4f4;
   padding: 0.25rem 0.5rem;
@@ -3112,10 +3121,10 @@ form button:hover::after {
   font-size: 0.65rem;
   text-transform: uppercase;
 }
-.work-container .item .item-header .item-meta-data p:hover {
+.work-item .item-header .item-meta-data p:hover {
   background: #475462;
 }
-.work-container .item .item-header .item-meta-data li {
+.work-item .item-header .item-meta-data li {
   border: 1px solid #000;
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
@@ -3125,18 +3134,18 @@ form button:hover::after {
   color: #f4f4f4;
   transition: 0.25s;
 }
-.work-container .item .item-header .item-meta-data li:hover {
+.work-item .item-header .item-meta-data li:hover {
   color: #b3c0cc;
 }
-.work-container .item .item-content {
+.work-item .item-content {
   padding: 0.5rem;
 }
 @media (min-width: 820px) {
-  .work-container .item .item-content {
+  .work-item .item-content {
     width: 50%;
   }
 }
-.work-container .item .item-content .item-image {
+.work-item .item-content .item-image {
   width: 100%;
   height: 100%;
   transition: 250ms;
@@ -3144,7 +3153,7 @@ form button:hover::after {
   position: relative;
   isolation: isolate;
 }
-.work-container .item .item-content .item-image::after {
+.work-item .item-content .item-image::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -3152,7 +3161,7 @@ form button:hover::after {
   border-radius: inherit;
   transition: 250ms;
 }
-.work-container .item .item-content .item-image img {
+.work-item .item-content .item-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -3160,47 +3169,39 @@ form button:hover::after {
   object-position: center;
   transition: 350ms;
 }
-@media (min-width: 768px) {
-  .work-container .item .item-content .item-image {
-    transform: scale(1.125);
-  }
-  .work-container .item .item-content .item-image img {
-    border-radius: 0;
-  }
-}
 @media (max-width: 820px) {
-  .work-container .item.io-item {
+  .work-item.io-item {
     opacity: 1;
     transform: translateY(5vh);
     transition: 1.25s;
   }
-  .work-container .item.active-item {
+  .work-item.active-item {
     opacity: 1;
     transform: translateY(0);
   }
 }
 @media (min-width: 820px) {
-  .work-container .item.io-item .item-header {
+  .work-item.io-item .item-header {
     opacity: 1;
     transform: translateX(5vw);
     transition: 1s;
   }
-  .work-container .item.io-item .item-content {
+  .work-item.io-item .item-content {
     opacity: 1;
     transform: translateX(-5vw);
     transition: 1s;
   }
-  .work-container .item.active-item .item-header {
+  .work-item.active-item .item-header {
     opacity: 1;
     transform: translateX(0);
   }
-  .work-container .item.active-item .item-content {
+  .work-item.active-item .item-content {
     opacity: 1;
     transform: translateX(0);
   }
 }
 @media (min-width: 768px) {
-  .work-container .item:hover .item-content img {
+  .work-item:hover .item-content img {
     border-radius: 0.25rem;
   }
 }
