--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -56,6 +56,7 @@
 
     @include abstracts.md {
         padding: 15vh 5vw;
+        padding: 15vh 10vw;
         grid-template-columns: 45% auto;
         grid-template-rows:  1fr 1fr;
         column-gap: 1rem;
@@ -107,6 +108,7 @@
 
 // HERO IMAGE
 .grid-image {
+    // border: 1px solid red;
     grid-area: grid-image;
 
     -webkit-mask: linear-gradient(0deg, transparent, white 30%, white 70%, transparent);
