--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -2,18 +2,20 @@
 // SKILLS SECTION
 .skills-section {
     padding: 10vh 0 0;
-    // background: linear-gradient(25deg, #ececec 25%, #fff 40%);
-    // background: #fafafa;
-    
 
     // ADD PADDING TO SECTION TITLE
     .skills-header {
         padding: 0 5vw;
+        
+
+        @include abstracts.lg {
+            padding: 0 10vw;
+        }
+
     }
 
     // SKILLS CONTENT CONTAINER
     .skills-content {
-
         // FIXED BACKGROUND IMAGE ON LARGER SCREENS
         @include abstracts.lg {
             background: url('../img/keyboard-mouse.jpg');
@@ -32,6 +34,7 @@
 
             @include abstracts.sm {
                 padding: 0vh 5vw 5vh;
+                padding: 0vh 10vw 5vh;
             }
 
             .skills-article {
@@ -51,7 +54,7 @@
                     }
 
                     @include abstracts.lg {
-                        max-width: 350px;
+                        max-width: 300px;
                         line-height: 2;
                     }
                     @include abstracts.xlg {
@@ -226,7 +229,7 @@
         isolation: isolate;
 
         @include abstracts.lg {
-            padding: 20vh 5vw 10vh;
+            padding: 20vh 10vw 10vh;
             height: 90vh;
             height: 100vh;
             background: linear-gradient(140deg, abstracts.$overlay-blue-darker 20%, abstracts.$overlay-blue-dark);
