--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -4,13 +4,16 @@
         scroll-margin-top: 5vh;
         padding: 10vh 5vw;
         min-height: 90vh;
-
+        background-color: hsl(0, 0%, 90%);
+        
         @include abstracts.lg {
-            padding: 10vh 5vw 5vh;
+            padding: 10vh 10vw 5vh;
+            background: linear-gradient(0deg, hsl(0, 0%, 70%), hsl(0, 0%, 100%));
         }
 
         @include abstracts.dark {
-            // background: abstracts.$overlay-blue-darker;
+            background-color: hsl(0, 0%, 30%);
+            background: abstracts.$overlay-blue-darker;
         }
 
     }
