--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,13 +3,16 @@
 #footer {
     background: abstracts.$overlay-blue-darkest;
     padding: 0 0 5vh 0;
+    
     .footer {
         min-height: 100vh;
         width: 100%;
         color: #eee;
-        @media (min-width: 1024px) {
+
+        @include abstracts.lg {
             padding: 10vh 5vw 5vh;
         }
+
         // SECTION-TITLE
         .footer-section-title {
                 color: #ffff;
@@ -450,4 +453,5 @@
             }
         }
     }
+
 }
