--- a/css/style.css
+++ b/css/style.css
@@ -2047,6 +2047,11 @@ form button:hover::after {
   box-shadow: 0px 0.5rem 0.5rem #0001;
   transition: 350ms;
 }
+@media (prefers-color-scheme: dark) {
+  .core-list-grid .list-grid-item {
+    color: #29323d;
+  }
+}
 .core-list-grid .list-grid-item .list-item-title {
   position: relative;
   text-transform: uppercase;
@@ -2092,9 +2097,6 @@ form button:hover::after {
   padding: 5vh 5vw;
 }
 
-.price-container {
-  border-color: red;
-}
 .price-container .container-title {
   background: #1f252d;
   color: #f4f4f4;
@@ -2124,6 +2126,11 @@ form button:hover::after {
   padding: 1rem 0.5rem;
   text-transform: capitalize;
 }
+@media (prefers-color-scheme: dark) {
+  .price-container .grid-container .price-group {
+    color: #29323d;
+  }
+}
 .price-container .grid-container .price-group h3 {
   margin-bottom: 1rem;
   font-size: 1.1rem;
@@ -2144,6 +2151,11 @@ form button:hover::after {
 }
 .price-container .grid-container .price-group ul li p {
   transition: 0.25s;
+}
+@media (prefers-color-scheme: dark) {
+  .price-container .grid-container .price-group ul li p {
+    color: #29323d;
+  }
 }
 .price-container .grid-container .price-group ul li:hover {
   border-bottom-color: transparent;
