--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -35,6 +35,10 @@
         border: 1px solid abstracts.$overlay-blue-light;
         box-shadow: 0px 0.5rem 0.5rem #0001;
         transition: 350ms;
+        
+        @include abstracts.dark {
+            color: abstracts.$overlay-blue-dark;
+        }
 
         .list-item-title {
             position: relative;
@@ -95,7 +99,6 @@
 }
 
 .price-container {
-    border-color: red;
     
     .container-title {
         background: abstracts.$overlay-blue-darker;
@@ -120,11 +123,15 @@
         }
 
         .price-group {
-            // border-color: pink;
             background-color: #f4f4f4;
             border-radius: abstracts.$brand-br;
             padding: 1rem .5rem;
             text-transform: capitalize;
+
+            // DARK THEME
+            @include abstracts.dark {
+                color: abstracts.$overlay-blue-dark;
+            }
 
             h3 {
                 margin-bottom: 1rem;
@@ -134,6 +141,7 @@
             }
 
             ul {
+
                 li {
                     display: flex;
                     justify-content: space-between;
@@ -141,14 +149,19 @@
                     margin-bottom: 1rem;
                     border-bottom: 2px solid #0004;
                     transition: .25s;
-                    h4{
+
+
+                    h4 {
                         font-weight: 400;
                         transition: .25s;
-                        
                     }
 
                     p {
                         transition: .25s;
+                        // DARK THEME
+                            @include abstracts.dark {
+                                color: abstracts.$overlay-blue-dark;
+                            }
                     }
 
                     &:hover {
