--- a/css/style.css
+++ b/css/style.css
@@ -1476,7 +1476,7 @@ form button:hover::after {
     justify-content: space-between;
     align-items: center;
     align-items: flex-start;
-    padding: 5vh 0 0;
+    padding: 15vh 0 5vh;
     gap: 1rem;
   }
 }
@@ -2530,7 +2530,6 @@ form button:hover::after {
 @media (min-width: 820px) {
   .skill-section .skill-section-title {
     padding: 20vh 10vw 10vh;
-    height: 90vh;
     height: 100vh;
     background: linear-gradient(140deg, #1f252d 20%, #29323d);
   }
