--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,5 +1,9 @@
 @use '../abstracts';
 
+:root {
+    interpolate-size: allow-keywords;
+}
+
 *, ::before, ::after {
     padding: 0;
     margin: 0;
