--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -289,19 +289,18 @@
     // DETAILS PSEUDO ELEMENT IN SHADOW DOM
     // DETAILS CONTENT IS SET BY DEFAULT TO "DISPLAY CONTENTS" ie = no box
     &::details-content {
-        overflow: hidden;
         display: block;
         block-size: 0;
         transition-property: block-size, content-visibility;
         transition-duration: 500ms;
-        transition-timing-function: linear;
+        transition-timing-function: ease;
         transition-behavior: allow-discrete;
     }
 
     // DETAILS OPEN STATE
     &[open]::details-content {
-        block-size: calc-size(auto);
         block-size: auto;
+        block-size: calc-size(auto);
     }
 
     &[open] summary::before {
